# Projet_Framework_M2_I2L

./: .gitignore  README.md  docker-compose.yml  nuxt.config.js  package-lock.json  package.json
.nuxt/: index.js  router.js  routes.json
.nuxt/pwa/: meta.json
api/: Cargo.toml  Dockerfile  Rocket.toml  config.toml
api/migrations/2023-02-19-141315_initialize/: down.sql  up.sql
api/src/: main.rs  models.rs  routes.rs  schema.rs  service.rs
api/src/models/: currency.rs  mod.rs  price.rs  transaction.rs  user.rs
api/src/routes/: currency.rs  mod.rs  price.rs  transaction.rs  user.rs
web/: Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json
web/api/: index.js
web/components/: Login.vue  Signup.vue  Tutorial.vue
web/components/Dashboard/: Balance.vue  BuySales.vue  Dashboard.vue  History.vue  Settings.vue
web/components/Dashboard/Parts/: PageHead.vue  Sidebar.vue
web/layouts/: default.vue
web/middleware/: need_auth.js
web/pages/: index.vue  signup.vue
web/pages/dashboard/: balance.vue  buy-sales.vue  history.vue  index.vue  settings.vue
web/static/: global.css
web/store/: index.js
web/store/users/: index.js
