[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Powerful date and time functionality
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.2", features = ["numeric", "mysql", "chrono", "serde_json"] }

bigdecimal = { version = "0.0.14", features = ["serde"] }
# Lazy static initialization
lazy_static = "1.3.0"

# Rocket Webserver
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", features = ["json", "diesel_mysql_pool"] }

# Serialization/Deserialization
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"
cargo-watch = "7.2.0"
bcrypt = "0.14"
jsonwebtoken = "8"
config = "0.11.0"
cron = "0.7.0"
reqwest = "0.10.0"
tokio = { version = "0.2.22", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

